2012-04-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvips.c: do not free getenved string.

2012-03-30  Norbert Preining  <preining@logic.at>

	* resident.c: add new directive "c<filename> to config files, allowing
	to include other config files.
	* dvips.texi: document it.
	* contrib/config.proto: add example.
	 
2012-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Fixed a typo (in comment).

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-20  Werner Fink <werner@suse.de>

	* dospecial.c (fgetboundingbox): Increase `buf' size to avoid
	overrun.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST, DISTCLEANFILES): Make sure that
	'make distclean' removes all generated files.

2011-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c, dopage.c, dvips.c, pprescan.c, scanpage.c, dvips.1,
	dvips.help, dvips.info and dvips.texi: pTeX with otf package
	by S. Saito requires set2, put2, and independent options
	-noomega and -noptex.

2011-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* afm2tfm.c (openfiles), resident.c (residentfont): Allow
	find_suffix() to return a const string.

2011-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* protos.h, loadfont.c (pkopen), search.c (pksearch): Declare
	font name as const.

2011-05-06  Karl Berry  <karl@tug.org>

	* writet1.c: update copyright as in pdftexdir.

2011-04-25  Karl Berry  <karl@tug.org>

	* afm2tfm.c (version),
	* dvips.h (BANNER): 5.991 for TeX Live 2011.
	
	* dvips.texi,
	* dvips.1: do not suggest that the default output is to lpr.

2011-02-25  Karl Berry  <karl@tug.org>

	* drawPS.c (flushDashedPath): cast to double before squaring,
	to avoid integer overflow.  (I guess this was hidden before by the
	assignment cast to float?  Said to work in 2009, failed in 2010.)
	* eepic-nan.test,
	* testdata/eepic-nan.tex,
	* testdata/eepic-nan.dvi,
	* testdata/config.pdf,